blackjack - duży progres w interfejsie

--- a/views/blackjack.ejs
+++ b/views/blackjack.ejs
@@ -36,6 +36,11 @@
 
 
 	</div>
+	<div class="btn-group actionButtons">
+		<button id="hit" type="button" class="btn btn-primary actionButton">Hit</button>
+	  	<button id="stand" type="button" class="btn btn-primary actionButton">Stand</button>
+	  	<button id="double" type="button" class="btn btn-primary actionButton">Double</button>
+	</div>
 	<script>
 		var app = angular.module('myApp', []);
 		app.controller('customersCtrl', ["$scope", "$http", function($scope, $http) {
