--- a/views/blackjack.ejs
+++ b/views/blackjack.ejs
@@ -9,7 +9,7 @@
 	<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 	<script src= "http://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
 	<script src="/socket.io/socket.io.js"></script>
-	<!--<script src="phaser\phaser.js"></script>-->
+	<script src="phaser\phaser.js"></script>
 	<script src="phaser\phaser.min.js"></script>
 	<script src="javascript/blackjack.js"></script>
 	<link rel="stylesheet" href="stylesheets/charades.css">
