blackjack - duży progres w interfejsie

--- a/views/blackjack.ejs
+++ b/views/blackjack.ejs
@@ -11,6 +11,7 @@
 	<script src="/socket.io/socket.io.js"></script>
 	<script src="phaser\phaser.js"></script>
 	<script src="phaser\phaser.min.js"></script>
+	<script src="https://code.createjs.com/tweenjs-0.6.1.min.js"></script>
 	<script src="javascript/blackjack.js"></script>
 	<link rel="stylesheet" href="stylesheets/charades.css">
 </head>
