wizualne zmiany w blackjacku i zaczęte kalambury

--- a/public/stylesheets/charades.less
+++ b/public/stylesheets/charades.less
@@ -43,8 +43,19 @@ canvas {
 	float: right;
 }
 
+
+.actionButton {
+	width: 70px;
+}
+
 .actionButtons {
 	position: fixed;
 	bottom: 0;
 	left: 50%;
+	margin-left: -105px;
+}
+
+canvas {
+   display : block;
+   margin : auto;
 }
