--- a/views/blackjack.ejs
+++ b/views/blackjack.ejs
@@ -38,9 +38,9 @@
 
 	</div>
 	<div class="btn-group actionButtons">
-		<button id="hit" type="button" class="btn btn-primary actionButton">Hit</button>
-	  	<button id="stand" type="button" class="btn btn-primary actionButton">Stand</button>
-	  	<button id="double" type="button" class="btn btn-primary actionButton">Double</button>
+		<button id="hit" type="button" class="btn btn-success actionButton">Hit</button>
+	  	<button id="stand" type="button" class="btn btn-success actionButton">Stand</button>
+	  	<button id="double" type="button" class="btn btn-success actionButton">Double</button>
 	</div>
 	<script>
 		var app = angular.module('myApp', []);
