--- a/public/stylesheets/charades.less
+++ b/public/stylesheets/charades.less
@@ -45,17 +45,19 @@ canvas {
 
 
 .actionButton {
-	width: 70px;
+	width: 100px;
 }
 
 .actionButtons {
-	position: fixed;
-	bottom: 0;
+	position: absolute;
+	top: 610px;
 	left: 50%;
-	margin-left: -105px;
+	margin-left: -150px;
 }
 
 canvas {
-   display : block;
-   margin : auto;
+	position: : absolute;
+	display : block;
+	margin : auto;
+	border: none;
 }
