--- a/views/blackjack.ejs
+++ b/views/blackjack.ejs
@@ -10,11 +10,11 @@
 	<script src="/socket.io/socket.io.js"></script>
 	<script src="phaser/phaser.js"></script>
 	<script src="phaser/phaser.min.js"></script>
-	<script src="https://code.createjs.com/tweenjs-0.6.1.min.js"></script>
+	<!--<script src="https://code.createjs.com/tweenjs-0.6.1.min.js"></script>-->
 	<script src="javascript/blackjack.js"></script>
 	<link rel="stylesheet" href="stylesheets/charades.css">
 </head>
-<body>
+<body> 
 	<div id="rooms" ng-app="myApp" ng-controller="customersCtrl">
 		<div class="btn-group-vertical roomdiv">
   		<button ng-repeat="x in rooms | orderBy: 'usersNum':true" type="button" class="btn btn-default btn-block roomEnter">
