--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -1,1 +1,71 @@
-Tutaj tylko strona z wyborem gry + możliwość zalogowania i rejestracji, kliknięcie w ikonę gry powoduje przekierowanie do innej strony
+<!DOCTYPE html>
+<html>
+<head>
+	<meta http-equiv="Content-type" content="text/html; charset=utf-8" />
+	<script src="libraries/jquery-1.11.3.min.js"></script>
+
+	<link rel="stylesheet" href="libraries/bootstrap-3.3.5-dist/css/bootstrap.min.css">
+	<script src="libraries/bootstrap-3.3.5-dist/js/bootstrap.min.js"></script>
+	<script src="libraries/angular-1.4.8/angular.min.js"></script>
+	<!--<script src="https://code.createjs.com/tweenjs-0.6.1.min.js"></script>-->
+	<script src="javascript/homepage.js"></script>
+	<link rel="stylesheet" href="stylesheets/homepage.css">
+</head>
+        <body>
+                <div id="top-container">
+                        <div id="website-name">
+                                Website Name
+                        </div>                 
+                        <div id="login" class="row">
+                        		<div id="sign-in" class="col-sm-6 log-button">
+                        			Sing In
+                        		</div>
+                        		<div id="sign-out" class="col-sm-6 log-button">
+                        			Sing Out
+                        		</div>
+                        </div>
+                </div>
+                <!-- <div id="left-container">
+                        <div id="friends-header">
+                                Friends
+                        </div>
+                        <ul class="FriendsList">
+                                <li>Friend1</li>
+                                <li>Friend2</li>
+                                <li>Friend3</li>
+                                <li>Friend4</li>
+                        </ul>
+                </div> -->
+                <div id="centre-containter">
+                        <div id="blackjack" class="games">
+                                
+                        </div>
+                        <div id="charades" class="games">
+                                
+                        </div>
+                        <div id="hangman" class="games">
+                              
+                        </div>
+                </div>
+               <!--  <div id="RightContainer">
+                        <div id="Chat">
+                                <div id="OutputChat">
+                                        <ul class="ChatList">
+                                                <li>User1: Bla bla bla</li>
+                                                <li>User1: Bla bla bla</li>
+                                                <li>User1: Bla bla bla</li>
+                                                <li>User1: Bla bla bla</li>
+                                        </ul>
+                                </div>
+                                <div id="InputChat">
+                                        <div id="Type">
+                                                Input
+                                        </div>
+                                        <div id="SendButton">
+                                                Send
+                                        </div>
+                                </div>
+                        </div>
+                </div>       -->                                   
+        </body>
+</html>
