blackjack - refaktoryzacja serwera

--- a/views/blackjack.ejs
+++ b/views/blackjack.ejs
@@ -41,6 +41,7 @@
 		<button id="hit" type="button" class="btn btn-success actionButton">Hit</button>
 	  	<button id="stand" type="button" class="btn btn-success actionButton">Stand</button>
 	  	<button id="double" type="button" class="btn btn-success actionButton">Double</button>
+	  	<button id="split" type="button" class="btn btn-success actionButton">Split</button>
 	</div>
 	<script>
 		var app = angular.module('myApp', []);
