system logowania i rejestracji + sesje

--- a/views/register.ejs
+++ b/views/register.ejs
@@ -8,13 +8,15 @@
   <script src="libraries/angular-1.4.8/angular.min.js"></script>
 </head>
 <body> 
+
 <form method="POST">
-  
-  Name:<input type="text" id="name" name ="name" placeholder="Enter text">
-  Password:<input type="password" id="pwd" name="password" placeholder="Enter password">
+	<%= message %>
+	Name:<input type="text" id="name" name ="name" placeholder="Enter text">
+	Password:<input type="password" id="pwd" name="password" placeholder="Enter password">
 
   <button type="submit" class="btn btn-default">Submit</button>
 
 </form>
+
 </body>
 </html>
