--- a/public/stylesheets/charades.less
+++ b/public/stylesheets/charades.less
@@ -27,7 +27,7 @@ canvas {
 	#output-room {
 		//.bordered;
 		height: 400px;
-		overflow-y: scroll;
+		//overflow-y: scroll;
 
 		button {
 			.singleRoomName {
