--- a/public/stylesheets/homepage.less
+++ b/public/stylesheets/homepage.less
@@ -12,7 +12,7 @@ body {
 #top-container {
 	position: fixed;
 	//.bordered;
-	height: 60px;
+	height: 50px;
 	width: 100%;
 
 	-webkit-transition: background-color 1s; /* Safari */
@@ -27,6 +27,7 @@ body {
 		height: 100%;
 		text-align: center;
 		margin-left: 100px;
+		line-height: 40px;
 	}
 
 	#login {
@@ -39,16 +40,16 @@ body {
 
 		.log-button {
 			//.bordered;
+			line-height: 40px;
 			border-bottom: 3px solid #808080;
 			height: 100%;
 			width: 47%;
 
-			-webkit-transition: border-bottom 0.5s, margin-top 0.5s; /* Safari */
-		    transition: border-bottom 0.5s, margin-top 0.5s;
+			-webkit-transition: border-bottom 0.5s; /* Safari */
+		    transition: border-bottom 0.5s;
 
 			&:hover {
 				border-color: #FF0000;
-				margin-top: 3px;
 			}
 		}
 
