funkcja sprawdzajaca poprawnosc hasła w kalamburach

--- a/public/stylesheets/charades.less
+++ b/public/stylesheets/charades.less
@@ -118,10 +118,13 @@ canvas {
 	top: 70px;
 	background-color: #1d3643;
 	color: white;
+	border-radius: 5px;
+	.bordered;
 
 	#chat {
 		width: 100%;
-		.bordered;
+		
+
 
 		#output-chat {
 			width: 100%;
