--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -38,13 +38,13 @@
                 </div> -->
                 <div id="centre-containter">
                         <div id="blackjack" class="games">
-                                
+                            <a href="/blackjack"></a>
                         </div>
                         <div id="charades" class="games">
-                                
+                            <a href="/charades"></a>  
                         </div>
                         <div id="hangman" class="games">
-                              
+                            <a href="/hangman"></a> 
                         </div>
                 </div>
                <!--  <div id="RightContainer">
