--- a/views/charades.ejs
+++ b/views/charades.ejs
@@ -25,7 +25,7 @@
 		</div>
 		<div id="input-room" class="row">
 			<div id="input-join" class="col-sm-9">
-				  <input type="text" class="form-control" id="roomname" placeholder="Enter Room Name">
+				  <input type="text" class="form-control" id="roomname" placeholder="Enter Room Name" data-toggle="tooltip" data-placement="left" title="To create a new room just enter its name here and click join">
 			</div>
 			<div id="submit-join" class="col-sm-3">
 				  <button id="create" type="button" class="btn btn-success">Join Room</button>
