--- a/views/charades.ejs
+++ b/views/charades.ejs
@@ -45,19 +45,7 @@
 			<button id="30" type="button" class="btn btn-default size">30</button>
 		</span>
 	</div>
-	<div id="top-container">
-		<div id="website-name">
-			Website Name
-		</div>
-		<div id="login" class="row">
-			<div id="sign-in" class="col-sm-6 log-button">
-				Sing In
-			</div>
-			<div id="sign-out" class="col-sm-6 log-button">
-				Sing Out
-			</div>
-		</div>
-	</div>
+	<%- include top-container.ejs %>
 	<div id="right-container">
 		<div id="chat">
 			<div id="output-chat">
