--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -12,19 +12,8 @@
 	<link rel="stylesheet" href="stylesheets/homepage.css">
 </head>
         <body>
-                <div id="top-container">
-                        <div id="website-name">
-                                Website Name
-                        </div>                 
-                        <div id="login" class="row">
-                        		<div id="sign-in" class="col-sm-6 log-button">
-                        			Sing In
-                        		</div>
-                        		<div id="sign-out" class="col-sm-6 log-button">
-                        			Sing Out
-                        		</div>
-                        </div>
-                </div>
+                <%- include top-container.ejs %>
+                
                 <!-- <div id="left-container">
                         <div id="friends-header">
                                 Friends
