--- a/public/stylesheets/blackjack.less
+++ b/public/stylesheets/blackjack.less
@@ -25,7 +25,7 @@ canvas {
 	margin-left: -200px;
 	top: 100px;
 	border-radius: 5px;
-	border-color: #1d3643;
+	border-color: #b30000;
 	
 	#output-room {
 		//.bordered;
