czat prawie gotowy

--- a/public/stylesheets/blackjack.less
+++ b/public/stylesheets/blackjack.less
@@ -80,5 +80,13 @@ canvas {
 	position: absolute;
 	top: 610px;
 	left: 50%;
-	margin-left: -150px;
+	margin-left: -200px;
+}
+
+.betButtons {
+	.actionButtons;
+}
+
+.betButton {
+	.actionButton
 }
