--- a/views/charades.ejs
+++ b/views/charades.ejs
@@ -11,8 +11,12 @@
 	<script src="/socket.io/socket.io.js"></script>
 	<script src="phaser/phaser.js"></script>
 	<script src="phaser/phaser.min.js"></script>
+	<script type="text/javascript">
+		var user = <%- JSON.stringify(user) %>;
+	</script>
 	<script src="javascript/charades.js"></script>
-	<link rel="stylesheet" href="stylesheets/homepage.css">
+	<script src="javascript/top-container.js"></script>
+	<link rel="stylesheet" href="stylesheets/top-container.css">
 	<link rel="stylesheet" href="stylesheets/charades.css">
 </head>
 <body>
