czat prawie gotowy

--- a/public/stylesheets/homepage.less
+++ b/public/stylesheets/homepage.less
@@ -19,6 +19,7 @@ body {
 	margin-left: -250px;
 	height: (@backgroundSizeX * 0.2329) * 3;
 
+
 	.games {
 		//.bordered;
 		width: 100%;
@@ -32,6 +33,8 @@ body {
 	}
 
 	#blackjack {
+		border-top-right-radius: 5px;
+		border-top-left-radius: 5px;
 		background-image: url("img/blackjack_logo.png");
 	}
 
@@ -40,6 +43,8 @@ body {
 	}
 
 	#hangman {
+		border-bottom-right-radius: 5px;
+		border-bottom-left-radius: 5px;
 		background-image: url("img/hangman_logo.png");
 	}
 }
