--- a/views/blackjack.ejs
+++ b/views/blackjack.ejs
@@ -20,23 +20,11 @@
 	<link rel="stylesheet" href="stylesheets/blackjack.css">
 </head>
 <body> 
-	<div id="rooms" ng-app="myApp" ng-controller="customersCtrl">
-		<div id="output-room">
-			<button ng-repeat="x in rooms | orderBy: 'usersNum':true" type="button" class="btn btn-default btn-block roomEnter">
-				<span class="singleRoomName">{{ x.name }}</span>
-				<span class="badge">{{ x.usersNum }}</span>
-			</button>
-		</div>
-		<div id="input-room" class="row">
-			<div id="input-join" class="col-sm-9">
-				  <input type="text" class="form-control" id="roomname" placeholder="Enter Room Name">
-			</div>
-			<div id="submit-join" class="col-sm-3">
-				  <button id="create" type="button" class="btn btn-success">Join Room</button>
-			</div>
-		</div>
+	<div ng-app="myApp">
+		<%- include top-container.ejs %>
+		<%- include angular-rooms-controller.ejs %>
 	</div>
-	<%- include top-container.ejs %>
+	
 	<div class="btn-group actionButtons">
 		<button id="hit" type="button" class="btn btn-success actionButton">Hit</button>
 		<button id="stand" type="button" class="btn btn-success actionButton">Stand</button>
@@ -49,19 +37,6 @@
 		<button id="50" type="button" class="btn btn-success betButton">50</button>
 		<button id="100" type="button" class="btn btn-success betButton">100</button>
 	</div>
-	<script>
-		var app = angular.module('myApp', []);
-		app.controller('customersCtrl', ["$scope", "$http", function($scope, $http) {
-				$http.get("/blackjack/rooms").success(function(response) {
-						$scope.rooms = response;
-					});
-					
-				$scope.update = function(rooms) {
-					$scope.$apply(function() {
-						$scope.rooms = rooms;
-					});
-				}
-		}]);
-	</script>
+	<script src="javascript/angular-controllers.js"></script>
 </body>
 </html>
