--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -13,7 +13,6 @@
 		var user = <%- JSON.stringify(user) %>;
 	</script>
 	<script src="javascript/homepage.js"></script>
-	
     <script src="javascript/top-container.js"></script>
     <link rel="stylesheet" href="stylesheets/top-container.css">
 	<link rel="stylesheet" href="stylesheets/homepage.css">
@@ -22,7 +21,9 @@
 	</script>
 </head>
 	<body>
+		<div ng-app="myApp">
         	<%- include top-container.ejs %>
+        </div>
                 
                
 
@@ -56,6 +57,7 @@
                                         </div>
                                 </div>
                         </div>
-                </div>       -->                                   
+                </div>       -->  
+                <script src="javascript/angular-controllers.js"></script>
         </body>
 </html>
